--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
     background: #f2f2f2;
     font-family: "Acme";
-    background: #ca1830;
+    background: #227e8a;
   }
   
   .container {
