--- a/style.css
+++ b/style.css
@@ -103,3 +103,15 @@ body {
     font-size: 1.3em;
     font-weight: 900;
   }
+footer {
+    text-align: center;
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.356);
+    position: fixed;
+    color: azure;
+    bottom: 0;
+    width: 100%;
+}
+
+
+  
